// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ballot redirects if ballot does not exist 1`] = `<div />`;

exports[`Ballot renders correctly with an audited ballot 1`] = `
<div>
  <div
    class="sc-hSdWYo iirkAi"
  >
    <div
      class="sc-ckVGcZ hkbcRl"
    >
      <div
        class="sc-cvbbAY gwPMhu"
      >
        <div
          class="sc-jWBwVP bmgJcF"
        >
          <div
            class="sc-brqgnP dvGbcs"
          >
            <div
              class="sc-iRbamj fagPRr"
            >
              <button
                class="bp3-button bp3-minimal sc-gPEVay hwAtFh"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-eHgmQL hKVbcd"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jAaTju hmiqEV"
            >
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  batch
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  0003-04-Precinct 13 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  position
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  313
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  tabulator
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  11
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jlyJG iNWejO"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div>
              <div
                class="sc-bwzfXH dSMaUq"
              >
                <div
                  class="ballot-main"
                >
                  <h4
                    class="bp3-heading sc-iwsKbI krynZG"
                  >
                    Ballot Contests
                  </h4>
                  <form>
                    <div
                      class="sc-htpNat kWdSWK"
                    >
                      <div
                        class="sc-gzVnrw eUAHzK"
                      >
                        <div
                          class="sc-htoDjs ClGoI"
                        >
                          <h3
                            class="bp3-heading sc-kGXeez fUYjWP"
                          >
                            Contest Name
                          </h3>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice One
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice Two
                              </span>
                            </span>
                          </label>
                        </div>
                        <div
                          class="sc-dnqmqq fUHzAV"
                        >
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Blank vote
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Not on Ballot
                              </span>
                            </span>
                          </label>
                          <div
                            class="sc-kgoBCf byjvik sc-fjdhpX fAFgBy"
                          >
                            <textarea
                              class="bp3-input sc-cSHVUG gCafTO"
                              name="comment-Contest Name"
                              placeholder="Add Note"
                            >
                              Good ballot
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="sc-ifAKCX jzSIMx"
                    >
                      <button
                        class="bp3-button bp3-large bp3-intent-success sc-kpOJdX fHhlNF sc-gqjmRU eotNvg"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          Submit Selections
                        </span>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-cMljjf ePGiKI"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-gipzik fCDfMG"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot renders correctly with an unaudited ballot 1`] = `
<div>
  <div
    class="sc-hSdWYo iirkAi"
  >
    <div
      class="sc-ckVGcZ hkbcRl"
    >
      <div
        class="sc-cvbbAY gwPMhu"
      >
        <div
          class="sc-jWBwVP bmgJcF"
        >
          <div
            class="sc-brqgnP dvGbcs"
          >
            <div
              class="sc-iRbamj fagPRr"
            >
              <button
                class="bp3-button bp3-minimal sc-gPEVay hwAtFh"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-eHgmQL hKVbcd"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jAaTju hmiqEV"
            >
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  batch
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  0003-04-Precinct 19 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  position
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  2112
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  tabulator
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  11
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jlyJG iNWejO"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div>
              <div
                class="sc-bwzfXH dSMaUq"
              >
                <div
                  class="ballot-main"
                >
                  <h4
                    class="bp3-heading sc-iwsKbI krynZG"
                  >
                    Ballot Contests
                  </h4>
                  <form>
                    <div
                      class="sc-htpNat kWdSWK"
                    >
                      <div
                        class="sc-gzVnrw eUAHzK"
                      >
                        <div
                          class="sc-htoDjs ClGoI"
                        >
                          <h3
                            class="bp3-heading sc-kGXeez fUYjWP"
                          >
                            Contest Name
                          </h3>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice One
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice Two
                              </span>
                            </span>
                          </label>
                        </div>
                        <div
                          class="sc-dnqmqq fUHzAV"
                        >
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Blank vote
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Not on Ballot
                              </span>
                            </span>
                          </label>
                          <div
                            class="sc-kgoBCf byjvik sc-fjdhpX fAFgBy"
                          >
                            <textarea
                              class="bp3-input sc-cSHVUG gCafTO"
                              name="comment-Contest Name"
                              placeholder="Add Note"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="sc-ifAKCX jzSIMx"
                    >
                      <button
                        class="bp3-button bp3-large bp3-intent-success sc-kpOJdX fHhlNF sc-gqjmRU eotNvg"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          Submit Selections
                        </span>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-cMljjf ePGiKI"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-gipzik fCDfMG"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot selects Blank vote 1`] = `
<div>
  <div
    class="sc-hSdWYo iirkAi"
  >
    <div
      class="sc-ckVGcZ hkbcRl"
    >
      <div
        class="sc-cvbbAY gwPMhu"
      >
        <div
          class="sc-jWBwVP bmgJcF"
        >
          <div
            class="sc-brqgnP dvGbcs"
          >
            <div
              class="sc-iRbamj fagPRr"
            >
              <button
                class="bp3-button bp3-minimal sc-gPEVay hwAtFh"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-eHgmQL hKVbcd"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jAaTju hmiqEV"
            >
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  batch
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  0003-04-Precinct 19 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  position
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  2112
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  tabulator
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  11
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jlyJG iNWejO"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div>
              <div
                class="sc-bwzfXH dSMaUq"
              >
                <div
                  class="ballot-main"
                >
                  <h4
                    class="bp3-heading sc-iwsKbI krynZG"
                  >
                    Ballot Contests
                  </h4>
                  <form>
                    <div
                      class="sc-htpNat kWdSWK"
                    >
                      <div
                        class="sc-gzVnrw eUAHzK"
                      >
                        <div
                          class="sc-htoDjs ClGoI"
                        >
                          <h3
                            class="bp3-heading sc-kGXeez fUYjWP"
                          >
                            Contest Name
                          </h3>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice One
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice Two
                              </span>
                            </span>
                          </label>
                        </div>
                        <div
                          class="sc-dnqmqq fUHzAV"
                        >
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Blank vote
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Not on Ballot
                              </span>
                            </span>
                          </label>
                          <div
                            class="sc-kgoBCf byjvik sc-fjdhpX fAFgBy"
                          >
                            <textarea
                              class="bp3-input sc-cSHVUG gCafTO"
                              name="comment-Contest Name"
                              placeholder="Add Note"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="sc-ifAKCX jzSIMx"
                    >
                      <button
                        class="bp3-button bp3-large bp3-intent-success sc-kpOJdX fHhlNF sc-gqjmRU eotNvg"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          Submit Selections
                        </span>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-cMljjf ePGiKI"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-gipzik fCDfMG"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot selects Not on Ballot 1`] = `
<div>
  <div
    class="sc-hSdWYo iirkAi"
  >
    <div
      class="sc-ckVGcZ hkbcRl"
    >
      <div
        class="sc-cvbbAY gwPMhu"
      >
        <div
          class="sc-jWBwVP bmgJcF"
        >
          <div
            class="sc-brqgnP dvGbcs"
          >
            <div
              class="sc-iRbamj fagPRr"
            >
              <button
                class="bp3-button bp3-minimal sc-gPEVay hwAtFh"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-eHgmQL hKVbcd"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jAaTju hmiqEV"
            >
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  batch
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  0003-04-Precinct 19 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  position
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  2112
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  tabulator
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  11
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jlyJG iNWejO"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div>
              <div
                class="sc-bwzfXH dSMaUq"
              >
                <div
                  class="ballot-main"
                >
                  <h4
                    class="bp3-heading sc-iwsKbI krynZG"
                  >
                    Ballot Contests
                  </h4>
                  <form>
                    <div
                      class="sc-htpNat kWdSWK"
                    >
                      <div
                        class="sc-gzVnrw eUAHzK"
                      >
                        <div
                          class="sc-htoDjs ClGoI"
                        >
                          <h3
                            class="bp3-heading sc-kGXeez fUYjWP"
                          >
                            Contest Name
                          </h3>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice One
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice Two
                              </span>
                            </span>
                          </label>
                        </div>
                        <div
                          class="sc-dnqmqq fUHzAV"
                        >
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Blank vote
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Not on Ballot
                              </span>
                            </span>
                          </label>
                          <div
                            class="sc-kgoBCf byjvik sc-fjdhpX fAFgBy"
                          >
                            <textarea
                              class="bp3-input sc-cSHVUG gCafTO"
                              name="comment-Contest Name"
                              placeholder="Add Note"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="sc-ifAKCX jzSIMx"
                    >
                      <button
                        class="bp3-button bp3-large bp3-intent-success sc-kpOJdX fHhlNF sc-gqjmRU eotNvg"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          Submit Selections
                        </span>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-cMljjf ePGiKI"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-gipzik fCDfMG"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot switches audit and review views 1`] = `
<div>
  <div
    class="sc-hSdWYo iirkAi"
  >
    <div
      class="sc-ckVGcZ hkbcRl"
    >
      <div
        class="sc-cvbbAY gwPMhu"
      >
        <div
          class="sc-jWBwVP bmgJcF"
        >
          <div
            class="sc-brqgnP dvGbcs"
          >
            <div
              class="sc-iRbamj fagPRr"
            >
              <button
                class="bp3-button bp3-minimal sc-gPEVay hwAtFh"
                href="/election/1/audit-board/1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-caret-left"
                  icon="caret-left"
                >
                  <svg
                    data-icon="caret-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      caret-left
                    </desc>
                    <path
                      d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  All Ballots
                </span>
              </button>
              <h3
                class="bp3-heading sc-eHgmQL hKVbcd"
              >
                Audit Ballot Selections
              </h3>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jAaTju hmiqEV"
            >
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  batch
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  0003-04-Precinct 19 (Jonesboro Fire Department)
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  position
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  2112
                </h4>
              </div>
              <div>
                <h4
                  class="bp3-heading sc-iwsKbI krynZG"
                >
                  tabulator
                </h4>
                <h4
                  class="bp3-heading sc-jDwBTQ iqySSz"
                >
                  11
                </h4>
              </div>
              <div>
                <button
                  class="bp3-button bp3-large bp3-intent-danger sc-jlyJG iNWejO"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Ballot Not Found
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div>
              <div
                class="sc-bwzfXH dSMaUq"
              >
                <div
                  class="ballot-main"
                >
                  <h4
                    class="bp3-heading sc-iwsKbI krynZG"
                  >
                    Ballot Contests
                  </h4>
                  <form>
                    <div
                      class="sc-htpNat kWdSWK"
                    >
                      <div
                        class="sc-gzVnrw eUAHzK"
                      >
                        <div
                          class="sc-htoDjs ClGoI"
                        >
                          <h3
                            class="bp3-heading sc-kGXeez fUYjWP"
                          >
                            Contest Name
                          </h3>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice One
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="undefined bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Choice Two
                              </span>
                            </span>
                          </label>
                        </div>
                        <div
                          class="sc-dnqmqq fUHzAV"
                        >
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Blank vote
                              </span>
                            </span>
                          </label>
                          <label
                            class="bp3-control bp3-checkbox sc-chPdSV gVsrQj"
                          >
                            <input
                              type="checkbox"
                            />
                            <span
                              class="small bp3-control-indicator"
                            >
                              <span
                                class="checkbox-text"
                              >
                                Not on Ballot
                              </span>
                            </span>
                          </label>
                          <div
                            class="sc-kgoBCf byjvik sc-fjdhpX fAFgBy"
                          >
                            <textarea
                              class="bp3-input sc-cSHVUG gCafTO"
                              name="comment-Contest Name"
                              placeholder="Add Note"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="sc-ifAKCX jzSIMx"
                    >
                      <button
                        class="bp3-button bp3-large bp3-intent-success sc-kpOJdX fHhlNF sc-gqjmRU eotNvg"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          Submit Selections
                        </span>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-cMljjf ePGiKI"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <ol
              class="bp3-list sc-gipzik fCDfMG"
            >
              <li>
                Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
                 
                <strong>
                  Ballot Not Found
                </strong>
                 at the top of the screen.
              </li>
              <li>
                For each contest, select all the candidate/choices which you see marked on the paper ballot. Select
                 
                <strong>
                  Blank Vote
                </strong>
                 if the voter did not make any selections. Select 
                <strong>
                  Not on Ballot
                </strong>
                 if the contest does not appear on the ballot.
              </li>
              <li>
                Once all votes are recorded,
                 
                <strong>
                  Submit Selections
                </strong>
                 and proceed to the next ballot until all ballots have been audited.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
